Bug 423603 - A elements with no HREF should not have state_linked, regression from bug 421066, patch=marco, aaronlev, r=aaronlev, marco, a=beltzner